# Multi-pipeline-MLOps

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.dvc/: config
backend/: main.py
backend/components/: data_ingestion.py  data_validation.py  delivery_analysis.py
backend/configration/: create_database.py  postgres_client.py  upload_csv.py
backend/constant/: __init__.py
backend/eda/: EDA.ipynb  __init__.py
backend/entity/: artifact_entity.py  config_entity.py
backend/exception/: __init__.py
backend/logger/: __init__.py
backend/pipeline/: training_pipeline.py
backend/utils/: __init__.py
backend/yamls/: schema.yaml
