[project]
name = "multi-pipeline-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "catboost>=1.2.10",
    "dotenv>=0.9.9",
    "dvc>=3.67.1",
    "fastapi>=0.135.3",
    "from-root>=1.3.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
